--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
   --dim-background: linear-gradient(var(--dim), var(--dim));
   --dim-drop: linear-gradient(
     transparent 0%,
-    transparent 30%,
-    var(--dim) 35%,
+    transparent 25%,
+    var(--dim) 30%,
     var(--dim) 100%
   );
   --light: #f9f9f9;
@@ -220,6 +220,7 @@ h2 {
   align-items: center;
   gap: 5vw;
   padding: 0vw 2vw;
+  scrollbar-width: 0px;
 }
 .tables {
   display: flex;
@@ -228,13 +229,16 @@ h2 {
   overflow: scroll;
   border-radius: 11px;
   border: 1px solid var(--dim-light);
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 #tables h2 {
   width: 90vw;
 }
 table {
   text-align: center;
-  /* box-shadow: inset 0px 0px 5px var(--dim-light); */
   border-radius: 10px;
   background: white;
   border: 1px solid var(--dim-light);
@@ -283,11 +287,13 @@ footer a:hover {
     display: block;
     background: var(--dim-drop);
     opacity: 0;
+    height: 150vh;
   }
   to {
     display: block;
     background: var(--dim-drop);
     opacity: 1;
+    height: 100vh;
   }
 }
 
@@ -310,20 +316,23 @@ footer a:hover {
   #hamburger {
     display: none;
     width: 2rem;
+    opacity: 0;
     transition:
       width 0.3s,
-      transform 0.3s;
+      transform 0.3s,
+      opacity 0.3s;
   }
   #hamburger:checked {
     display: block;
     position: fixed;
-    top: 0;
+    /* top: 0; */
     bottom: 0;
     left: 0;
     right: 0;
     width: 100vw;
     height: 100vh;
     appearance: none;
+    opacity: 0;
     transition:
       width 0.3s,
       transform 0.3s,
