--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,6 @@ h2 {
   overflow: hidden;
   width: 187px;
   height: calc(187px * 1.4);
-  /* aspect-ratio: 1 / 1.4; */
   margin: 0.3rem;
   gap: 1rem;
   box-shadow: 0px 0px 3px var(--dim);
@@ -298,6 +297,17 @@ th {
 tr {
   border-bottom: 1px solid var(--dim-light);
   box-sizing: border-box;
+}
+
+/* map in the contacts page */
+.map {
+  display: flex;
+  justify-content: center;
+}
+
+.map iframe {
+  border-radius: 10px;
+  border: 2px solid var(--dim-light);
 }
 
 /* footer of the page */
